# cookiecutter-pymodule

./: .gitignore  .travis.yml  CONTRIBUTING.rst  README.rst  cookiecutter.json  requirements_dev.txt  setup.cfg  setup.py  tasks.py
docs/: Makefile  conf.py  console_script_setup.rst  index.rst  make.bat  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: Makefile  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/docs/: index.rst
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _compat.py  {{cookiecutter.project_slug}}.py
