[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:docs/conf.py]
search = = '{current_version}'
replace = = '{new_version}'

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[tool:pytest]
testpaths = tests/

